--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ﻿<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>IndyHAX â€¢ Robots 2</title>
+<title>IndyHAX CTF: €¢ Robots 2</title>
 <style>body{font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;max-width:900px;margin:40px auto;padding:0 16px}.card{border:1px solid #ddd;border-radius:12px;padding:18px;background:#fff}.muted{color:#666}</style>
 </head><body>
-<h1>IndyHAX CTF - Robots 2</h1>
+<h1>IndyHAX CTF: Robots 2</h1>
 <div class="card">
 <p class="muted">Start at robots.txt.</p>
 </div>
